<resources>
    <!--UI-->
    <string name="app_name">MalSearcherRx</string>
    <string name="anime_search_button">Anime Title</string>
    <string name="login">What\'s your MAL username?</string>
    <string name="login_hint">Username</string>
    <string name="login_submit">Submit</string>

    <!--Settings-->
    <string name="username_setting">USERNAME</string>
    <string name="anime">Anime:</string>
    <string name="character">Character:</string>
    <string name="language">Language:</string>
    <string name="search">Search</string>
    <string name="anime_search_hint">Anime Title</string>
    <string name="character_search_hint">Character Name</string>
    <string name="language_search_hint">Language</string>
    <string name="search_for_anime_button_default">Search for Anime</string>
    <string name="search_for_character_button_default">Search for Character</string>
    <string name="select_language_button_default">Select Language</string>
</resources>
