<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_column="0"
                        android:text="@string/anime" />

                    <Button
                        android:id="@+id/anime_search_button"
                        android:layout_column="1"/>

                </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_column="0"
                    android:text="@string/character" />

                <Button
                    android:id="@+id/character_search_button"
                    android:layout_column="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_column="0"
                    android:text="@string/language" />

                <Button
                    android:id="@+id/language_search_button"
                    android:layout_column="1"/>
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/search"/>


</LinearLayout>